glFusion ChangeLog

v1.1.4
------
- Search did not display proper results when search string contained % (Mark)
- Added ability to enable / disable plugins in fusionrescue.php (Mark)
- Added permission check for MG tmp directory during install / upgrade (Mark)
- Added CUSTOM_js() hook to allow addition of other JS files (Mark)
- 0000441: Advanced path settings in the installation screen are not updated
  if base path changes (Mark)
- Group editor did not properly save additional groups or features (Mark)
- Set height of logview window to facilitate easier horizontal scrolling (Eric)
- Moved css and js cache files to layout_cache/ directory (Mark)
- Added $_SYSTEM['skip_ip_check'] to disable the long term cookie IP check
  (Mark)
- Handle disabled set_time_limit() function better in plugin upload routines
  (Mark)
- Fine tuned SQL calls to help prevent injection / other issues (Mark)
- Force IE8 to use IE7 compatibility mode to resolve text entry issues with
  the forum plugin (Mark)
- Properly filter the topics array prior to using in SQL in usersettings.php
  (Mark)
- Add CRLF between each JavaScript file (Mark)
- Additional security tweaks (Mark)
- 0000422 Use of adveditor in block editor does not permit use of image insert
  or file upload connector (Mark)
- Implemented 'passwd' configuration type, this allows passwords in the
  configuration screen to be properly masked (Mark)
- Story submission does not clear the Site Tailor menu cache which results
  in the topic story count being wrong (Mark) (story.class.php)
- Installation did not properly detect missing siteconfig.php.dist file (Mark)
- Advanced search using date range did not return stories or comments in
  that date range (Mark)

FileMgmt
--------
- Call stripslashes() on file description prior to emailing admins of new
  upload (Mark)
- Ability to change the owner (submitter) of a file (Mark)

Forum
-----
- Root users could not post to read only forums (Mark)